--- a/style.css
+++ b/style.css
@@ -7,3 +7,13 @@ body {
 .btn{
     line-height: 1.2;
 }
+
+audio::-webkit-media-controls-panel {
+    background-color: #121213;
+  }
+  
+  audio::-webkit-media-controls-play-button {
+    background-color: #dca54c;
+    border-radius: 50%;
+    color: black;
+  }
